--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=BackEndHealthHabbits
+# db
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5532/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+server.error.include-stacktrace=never
+logging.level.org.springframework.security=DEBUG
+
+logging.level.org.springdoc=DEBUG
+spring.jpa.hibernate.ddl-auto=update
+
+
+api.security.token.secret= secretHealthHabbits1234#!
+auth.jwt.token.expiration=1
+auth.jwt.refresh-token.expiration=9
+
+# doc
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.url=/v3/api-docs
+springdoc.swagger-ui.enabled=true
