feat: flyway and small changes on endpoint register

--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-
+		<!-- Flyway -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 		<!-- Database -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
