--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ server.error.include-stacktrace=never
 logging.level.org.springframework.security=DEBUG
 
 logging.level.org.springdoc=DEBUG
-spring.jpa.hibernate.ddl-auto=update
+# criar entidades auto
+# spring.jpa.hibernate.ddl-auto=update
 
 
 api.security.token.secret= secretHealthHabbits1234#!
