new entities, register working with token and refreshtoken

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.org.springframework.security=DEBUG
 
 logging.level.org.springdoc=DEBUG
 # criar entidades auto
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 
 api.security.token.secret= secretHealthHabbits1234#!
