--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5532:5432"
-    volumes:
-      - ./.volumes/postgres:/var/lib/postgresql/data
+#    volumes:
+#      - ./.volumes/postgres:/var/lib/postgresql/data
