--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ auth.jwt.refresh-token.expiration=9
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.enabled=true
+
+spring.jackson.default-property-inclusion=non_null
